<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Beer-o-Meter</string>
    <string name="hello_world">Seismograph</string>
    <string name="action_settings">Settings</string>
    <string name="default_cool_down">3</string>
    <string name="buffer_size">6</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_xaxis">X-axis</string>
    <string name="action_yaxis">Y-axis</string>
    <string name="action_zaxis">Z-axis</string>
    <string name="start_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="chronometer_start">Start</string>
    <string name="chronometer_stop">Stop</string>
    <string name="chronometer_reset">Reset</string>
    <string name="chronometer_set_format">Set format string</string>
    <string name="chronometer_clear_format">Clear format string</string>
    <string name="chronometer_initial_format">Initial format: <xliff:g id="initial-format">%s</xliff:g></string>
    <string name="format1">mm:ss.SSS</string>
    <string name="beer_o_meter_multiline">Beer \t\t\t\t\t\t\t\t\t\t \n -o- \n \t\t\t\t\t\t\t\t\t\t\t\t\t\t Meter</string>
    <string name="welcome_message">Hi %s!</string>
    <string name="drink">Drink!</string>
    <string name="select_profile">Select profile</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="start_stop_with_button">Start/stop with button</string>
    <string name="player">Player</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="manage_mode">Manage mode</string>
    <string name="default_username">Anonymous</string>
    <string name="anonymous">Anonymous</string>
    <string name="set_defaults">Set defaults</string>
    <string name="autosave">Autosave highscores</string>
    <string name="always_ask">Always ask</string>
    <string name="dont_save">Don\'t save</string>
    <string name="select">Select</string>
    <string name="new_profile">New profile</string>
    <string name="selected">Selected</string>
    <string name="one_user_alert">There must be at least one user</string>
    <string name="username_taken">Username is already taken</string>
    <string name="null_username_alert">Username must be at least one character long</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="long_username_alert">Username is maximum 30 characters long</string>
    <string name="clear_highScores">Clear highscores</string>
    <string name="drinks">" drinks"</string>
    <string name="save_highscore_question">Do you want to save your highscore?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="your_best_was">"Your best was: "</string>
</resources>
