<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center">


        <TextView
            android:gravity="center"
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/welcome_message"
            android:textColor="#0c0c0c"
            android:textSize="30sp" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/drink_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/drink"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@color/colorForeground"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/select_profile_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/select_profile"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@color/colorForeground"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/highscores_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/highscores"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@color/colorForeground"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/settings_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/settings"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@color/colorForeground"/>


    </LinearLayout>

</LinearLayout>