<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorBackground">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sensitivity"
                android:textSize="20sp"
                />

            <SeekBar
                android:id="@+id/sensitivityBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="20"
                android:progress="6"
                android:secondaryProgress="6" />

            <TextView
                android:id="@+id/sensitivityBarValue"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="3.0"
                android:textSize="20sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/player"
                android:gravity="start"
                android:layout_gravity="start"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="end">

                <TextView
                    android:id="@+id/activeProfileText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:textSize="20sp"
                    android:layout_marginRight="6dp"/>

                <ImageView
                    android:id="@+id/selectProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_24dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/start_stop_with_button"
                android:textSize="20sp"
                />

            <Switch
                android:id="@+id/startStopWithButtonSwitch"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:checked="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/manage_mode"
                android:gravity="start"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/modeSpinner"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_margin="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">


            <Button
                android:id="@+id/setDefaults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_defaults"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>